--- a/michelanglo_app/static/theme.css
+++ b/michelanglo_app/static/theme.css
@@ -14,3 +14,86 @@
     top: 0;
     height: 100%;
 }
+
+.arrow-left {
+    left:-30px; top: 80px; position: absolute; width: 0; z-index:1000;
+    height: 0;
+    border-style: solid;
+    border-width: 30px 30px 30px 0;
+    border-color: transparent rgba(0, 0, 0, 0.125) transparent transparent;
+
+}
+
+.arrow-left:after {
+    display: block;
+    content: "";
+    position: absolute;
+    left: 1px; top: -30px;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 30px 30px 30px 0;
+    z-index:1000;
+    border-color: transparent white transparent transparent;
+}
+
+.arrow-right {
+    right:-30px; top: 80px; position: absolute; width: 0; z-index:1000;
+    height: 0;
+    border-style: solid;
+    border-width: 30px 0px 30px 30px;
+    border-color: transparent transparent transparent rgba(0, 0, 0, 0.125);
+
+}
+
+.arrow-right:after {
+    display: block;
+    content: "";
+    position: absolute;
+    right: 1px; top: -30px;
+    width: 0;
+    z-index:1000;
+    height: 0;
+    border-style: solid;
+    border-width: 30px 0px 30px 30px;
+    border-color: transparent transparent transparent white;
+}
+
+
+ /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+.flip-card {
+  background-color: transparent;
+  padding-top: 10%;
+  height: 300px;
+  /*perspective: 200px; /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 2s;
+  transform-style: preserve-3d;
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  padding-top: 10%;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.flip-card-inner > * {backface-visibility: hidden;}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+}
+
+/* Style the back side */
+.flip-card-back {
+  transform: rotateX(180deg);
+}
