:hammer: high constrast mode permanence

--- a/michelanglo_app/static/accessible.css
+++ b/michelanglo_app/static/accessible.css
@@ -35,3 +35,4 @@ main {background-image: none;}
 .border-top {border-top: 2px solid black !important;}
 .border-bottom {border-top: 2px solid black !important;}
 .form-control {border: 2px solid black !important ;}
+.toast {border: 2px solid black !important ;}
